06_rect/grade.txt
Grading at Mon Jan 21 21:09:52 UTC 2019
Attempting to compile rectangle.c
rectangle.c:1:2: error: invalid preprocessing directive #tdio
 #tdio.h>
  ^
rectangle.c: In function ‘printRectangle’:
rectangle.c:82:5: error: implicit declaration of function ‘printf’ [-Werror=implicit-function-declaration]
     printf("<empty>\n");
     ^
rectangle.c:82:5: error: incompatible implicit declaration of built-in function ‘printf’ [-Werror]
rectangle.c:82:5: note: include ‘<stdio.h>’ or provide a declaration of ‘printf’
rectangle.c:85:5: error: incompatible implicit declaration of built-in function ‘printf’ [-Werror]
     printf("(%d,%d) to (%d,%d)\n", r.x, r.y,
     ^
rectangle.c:85:5: note: include ‘<stdio.h>’ or provide a declaration of ‘printf’
rectangle.c: In function ‘main’:
rectangle.c:100:3: error: incompatible implicit declaration of built-in function ‘printf’ [-Werror]
   printf("r1 is ");
   ^
rectangle.c:100:3: note: include ‘<stdio.h>’ or provide a declaration of ‘printf’
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
